styling actors page

--- a/GreatestMovies/GreatestMovies.csproj
+++ b/GreatestMovies/GreatestMovies.csproj
@@ -172,6 +172,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\movie-film-video-production-ss-1920-800x450.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
